# discord-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image-dev.yml  docker-image.yml
cogs/: admin.py  currencyConverter.py  define.py  fun.py  hello.py  info.py  moderation.py  personalization.py  photodownload.py  translator.py  vdl.py  videodownload.py  welcome.py
cogs/optional/: README.md
config/: config.json
data/: config.json
docker/: docker-entrypoint.sh
pg_init/: 01-configure-pg-hba.sh
utils/: __language_data.py  helpers.py  paginator.py
