[project]
name = "discord-bot"
version = "1.0.0"
description = "The Headhunter's Guild Discord Bot"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "deep-translator>=1.11.4",
    "discord-py>=2.5.2",
    "instaloader>=4.14.1",
    "langdetect>=1.0.9",
    "pymultidictionary>=1.3.2",
    "python-dateutil>=2.9.0.post0",
    "pytube>=15.0.0",
    "yt-dlp>=2025.4.30",
]

